{
    "name": "PlayerActions",
    "maps": [
        {
            "name": "Movimento",
            "id": "a9022b18-659b-4ba2-9fa7-e08514661e45",
            "actions": [
                {
                    "name": "Norte/Sul",
                    "type": "Button",
                    "id": "93e5d99a-5763-40f7-9df0-78ca912f1af4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Leste/Oeste",
                    "type": "Button",
                    "id": "e7f4a3ec-b3db-4d5b-9e39-4d73faecab03",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "f9fc6b6c-c6c4-4ad7-8586-06f5d69b1f33",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Norte/Sul",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "0b9a26ff-6a9e-412b-a22e-3df84278e2b6",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Norte/Sul",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "8eca80bd-bbb9-43af-a284-75851d6a1aa4",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Norte/Sul",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Setas",
                    "id": "2b0a2a5f-ba49-46a0-8c86-a1b4e740f1c4",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Norte/Sul",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "739a5c00-42b2-4df9-b05e-965bece547b6",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Norte/Sul",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "f15a0fd3-948b-4198-b3b1-2b9ae5c3955d",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Norte/Sul",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "WASD",
                    "id": "53d738c3-d2ba-4d9b-9892-d8902c53b3e3",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Leste/Oeste",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "25426e09-dae5-4958-87cc-5b9b1952b979",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Leste/Oeste",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "6aa274b1-3643-4165-9dcf-096d07600df2",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Leste/Oeste",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Setas",
                    "id": "76f47b46-132c-47ba-84b0-35e2b8d334e3",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Leste/Oeste",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "d22ef4f5-5043-405b-a9a4-8df4e0d69dc6",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Leste/Oeste",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "0eab1153-07b6-4e9e-8c5f-a4fa4d02c2cb",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Leste/Oeste",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "UI",
            "id": "1fbd6263-ab35-46d7-8baa-8c1dd527e97b",
            "actions": [
                {
                    "name": "Esc",
                    "type": "Button",
                    "id": "1f2a682d-b5dc-4d77-8e1d-242e71dc4c5f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4f784390-e9c0-4883-90eb-8c0122961433",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Esc",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}